--- a/CoffeeMaster/coffee.html
+++ b/CoffeeMaster/coffee.html
@@ -8,3 +8,21 @@
 -->
 
 <!-- بمتجر القهوة المفضل لديك وقم بالازم Caribouاستبدل محمد باسمك و -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>قهوتي</title>
+  </head>
+  <body>
+    <h1>
+      مرحباً
+    </h1>
+    <h2>
+      أنا محمد
+    </h2>
+    <h3>
+      Starbucksوقهوتي المفضلة أحصل عليها من
+    </h3>
+  </body>
+</html>
